--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "fcc-exercise-tracker",
+	"name": "exercise-tracker-api-server",
 	"version": "0.1.0",
 	"description": "A REST API project, part of Free Code Camp's curriculum",
 	"main": "server.js",
@@ -9,14 +9,18 @@
 	"dependencies": {
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"cors": "^2.8.5",
+		"mongodb": ">=4.2",
+		"mongoose":"~5.0"
 	},
 	"repository": {
-		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
+		"type": "git",
+		"url": "https://github.com/jaro-m/exercise-tracker-api-server"
 	},
 	"license": "MIT",
 	"keywords": [
 		"node",
-		"express"
+		"express",
+		"mongoose"
 	]
 }
